--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/3/n13136059.md#1" title="【思想领袖】章家敦：中共攻台？习恐惧2因素""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13155603-et-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/11/n13155906.md#1" title="美军成功试射洲际弹道导弹 震撼视频曝光""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13155935-210811-F-IN231-1011-320x200.jpeg">&nbsp;</a>
 <p align="center"><a href="https://github.com/xejgby3625/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xejgby3625.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159430.md#1">沈阳公安局长杨建军被查 其下属两个月前落马</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13157880.md#1">网谣传法轮功退出香港 陆委会：有心人散布假新闻</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159227.md#1">纽约市总人口880万  比10年前增60万人</a><br>
-:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159230.md#1">霍楚宣布明年参选纽约州长</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159236.md#1">纽约市长：九月开学 公校不提供远程上课</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159384.md#1">UCSD医疗中心员工门卡加疫苗注射标志</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159264.md#1">美军上将：应对中共核威胁 美须强化威慑力</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13158041.md#1">《人民日报》分社长批钟南山 评论：高层内斗</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13158761.md#1">特斯拉7月在华销售环比下滑近七成</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159411.md#1">【翻墙必看】中共喉舌深夜发文 习或渡过难关</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159430.md#1">沈阳公安局长杨建军被查 其下属两个月前落马</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13157880.md#1">网谣传法轮功退出香港 陆委会：有心人散布假新闻</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/11/n13155176.md#1">【拍案惊奇】战狼主战军头要和？习近平尴尬</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13156436.md#1">中共将严审卡拉OK曲目 引来网民嘲讽</a><br>
@@ -46,13 +46,14 @@
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13158773.md#1">分析：习近平当局伸出干预市场的第三只手</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13157273.md#1">【一线采访】湖北洪水 村民：淹死不少人</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13157948.md#1">【新闻看点?】张文宏遭党媒追打 谭德塞语出惊人</a><br>
-<a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13158551.md#1">【秦鹏直播】央视泄歼10弱点 中国经济数据惨淡</a><br>
-<a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159009.md#1">湖北随州遭洪水突袭 妻子遇难前给夫发诀别信</a><br>
+<a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159411.md#1">【翻墙必看】中共喉舌深夜发文 习或渡过难关</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159051.md#1">【一线采访】扬州志愿者曝高风险区封锁细节</a><br>
+<a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13159009.md#1">湖北随州遭洪水突袭 妻子遇难前给夫发诀别信</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/13/n13158858.md#1">【横河观点】拒为外交战狼买单 中共军方怕打仗？</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13158700.md#1">IG上发文称“中国” 胡杏儿遭小粉红轰港独</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13157843.md#1">【财商天下】严惩阿里轻判腾讯 中共的图谋</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13158515.md#1">挺孙俪挨网酸蹭老婆热度 邓超三字回应超宠妻</a><br>
+<a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13158551.md#1">【秦鹏直播】央视泄歼10弱点 中国经济数据惨淡</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13157763.md#1">【微视频】阿里巴巴性丑闻源于“酒桌文化”？</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13157475.md#1">江西省女子监狱两任监狱长涉命案</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/12/n13157722.md#1">扬州隔离酒店人满为患 中共防疫模式受挑战</a><br>
@@ -95,14 +96,14 @@
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/6/n13143951.md#1">山东统战部部长张江汀恶行被递交37国政府</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/9/n13150273.md#1">【微视频】金牌美超中国 中共举国追金值吗</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://118.165.155.180/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 45,883</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.47.80.10/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 45,883</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 381,873,437 人
+!共 381,875,662 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13155925-9e116f019b67ae913085fdeb5453b987@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1">兰州八旬法轮功学员陷冤狱三年 被逼喝尿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156394.md#1">专家：中共或滥用苹果新扫描软件追捕异己</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155489.md#1">德国秋季大选 绿党若参与执政将对中俄更强硬</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154437.md#1">广东粤曲家转发帖文被传唤 审讯中三次昏倒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152242.md#1">辽宁法轮功学员魏明霞被看守所迫害致死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152467.md#1">【拍案惊奇】每天一锤打压民企 习近平收财权</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157766.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-102064313-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157766.md#1">中国7月金融数据疲弱 学者分析主因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157718.md#1">海运现塞港危机 中国舟山港因疫情封港</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156764.md#1">A股三大指数震荡下跌 两市成交额再超万亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156496.md#1">忧中共加强管控 软银将中国投资比重减半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156207.md#1">外媒：中共或用反腐之名整肃控制民企</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13156018.md#1">“芯片荒”冲击下 中国汽车销量持续下滑</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159430.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159430.md#1">沈阳公安局长杨建军被查 其下属两个月前落马</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159185.md#1">专访美智库主席：中国没有真正的资本主义</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159052.md#1">法军舰现身台湾外海 台国防部：周边情势正常</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13158690.md#1">消息：美中情局考虑设立专门的中国行动小组</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13158477.md#1">美国将召开民主峰会或邀请台湾 中共喉舌恐吓</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13158531.md#1">中共重判加拿大公民 学者：开启国际霸凌案例</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159044.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13157277-page-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159044.md#1">湖北柳林洪灾 亲历者目睹邻居被大水冲走</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157122.md#1">视频：湖北随州洪灾柳林镇危急 大水涨至二楼</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156646.md#1">南京市ICU病房护士确诊染疫</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155969.md#1">中国最大货运港爆疫情 恐冲击外贸航运</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154599.md#1">【疫情8.11】美国军人可申请疫苗宗教豁免</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154242.md#1">【一线采访】受灾无救助 河南滑县商户曝困境</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158831.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158831.md#1">三退声明精选（2021/08/12）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13158404.md#1">张智霖打算退出演艺圈？袁咏仪霸气回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155663.md#1">孙俪意外重看自己演的戏 吓到差点跌下跑步机</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154358.md#1">组图：武汉疫情延烧 全城居民持续接受筛检</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152337.md#1">组图：疫情爆发期 北京防控再升级</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152653.md#1">动物模仿游客群殴？北京动物园声明火了</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159180.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/06/20160616_gaokao-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159180.md#1">北京严厉打击课外培训 令昂贵家教转入地下</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156222.md#1">上海弱化英语教育 分析：闭关锁国前兆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/9/n13150235.md#1">家长揭赣州中考志愿填报存在弊端 校方否认</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/8/n13147071.md#1">上海率先定“习思想”为必修课 评论：加强洗脑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13146497.md#1">中共为何将学校“民转公”整顿教育培训？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13144989.md#1">香港教师被“志愿”参加暑期托管班 却与评级挂钩</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13155925-9e116f019b67ae913085fdeb5453b987@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1">兰州八旬法轮功学员陷冤狱三年 被逼喝尿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156394.md#1">专家：中共或滥用苹果新扫描软件追捕异己</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155489.md#1">德国秋季大选 绿党若参与执政将对中俄更强硬</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154437.md#1">广东粤曲家转发帖文被传唤 审讯中三次昏倒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152242.md#1">辽宁法轮功学员魏明霞被看守所迫害致死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152467.md#1">【拍案惊奇】每天一锤打压民企 习近平收财权</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158761.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13000486-GettyImages-1311107771@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158761.md#1">特斯拉7月在华销售环比下滑近七成</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157766.md#1">中国7月金融数据疲弱 学者分析主因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157718.md#1">海运现塞港危机 中国舟山港因疫情封港</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156764.md#1">A股三大指数震荡下跌 两市成交额再超万亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156496.md#1">忧中共加强管控 软银将中国投资比重减半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156207.md#1">外媒：中共或用反腐之名整肃控制民企</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159430.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159430.md#1">沈阳公安局长杨建军被查 其下属两个月前落马</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159185.md#1">专访美智库主席：中国没有真正的资本主义</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159052.md#1">法军舰现身台湾外海 台国防部：周边情势正常</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13158690.md#1">消息：美中情局考虑设立专门的中国行动小组</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13158477.md#1">美国将召开民主峰会或邀请台湾 中共喉舌恐吓</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13158531.md#1">中共重判加拿大公民 学者：开启国际霸凌案例</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159044.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13157277-page-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159044.md#1">湖北柳林洪灾 亲历者目睹邻居被大水冲走</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157122.md#1">视频：湖北随州洪灾柳林镇危急 大水涨至二楼</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156646.md#1">南京市ICU病房护士确诊染疫</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155969.md#1">中国最大货运港爆疫情 恐冲击外贸航运</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154599.md#1">【疫情8.11】美国军人可申请疫苗宗教豁免</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154242.md#1">【一线采访】受灾无救助 河南滑县商户曝困境</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158831.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158831.md#1">三退声明精选（2021/08/12）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13158404.md#1">张智霖打算退出演艺圈？袁咏仪霸气回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155663.md#1">孙俪意外重看自己演的戏 吓到差点跌下跑步机</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154358.md#1">组图：武汉疫情延烧 全城居民持续接受筛检</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152337.md#1">组图：疫情爆发期 北京防控再升级</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152653.md#1">动物模仿游客群殴？北京动物园声明火了</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159180.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/06/20160616_gaokao-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159180.md#1">北京严厉打击课外培训 令昂贵家教转入地下</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156222.md#1">上海弱化英语教育 分析：闭关锁国前兆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/9/n13150235.md#1">家长揭赣州中考志愿填报存在弊端 校方否认</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/8/n13147071.md#1">上海率先定“习思想”为必修课 评论：加强洗脑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13146497.md#1">中共为何将学校“民转公”整顿教育培训？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13144989.md#1">香港教师被“志愿”参加暑期托管班 却与评级挂钩</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/10/n13153422.md#1">奥运场外大陆高涨的“民族主义”情绪</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/5/n13141769.md#1">基辛格访华50年 中共对美仇恨从未变</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/3/n13134887.md#1">【独家】文件泄中共谋取以色列高科技秘闻</a><br>
@@ -112,7 +113,7 @@
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/xejgby3625/djy/blob/master/gb/21/5/26/n12976463.md#1">【金色种子】1997年李洪志大师的台湾行</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/7/31/n13130048.md#1">克罗索斯以亡国的代价 领悟了神谕和幸福</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/11/n13155500.md#1">【古韵流芳】生死劫后淡功名 贺知章的仙缘</a><br>
-<a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/9/n13149762.md#1">古人为何以“乡梓”代指故乡</a><br>
+<a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/9/n13149762.md#1">为何“乡梓”代指故乡呢？</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/8/10/n13153445.md#1">【未解之谜】外星人就在你身边</a><br>
 <a href="https://github.com/xejgby3625/djy/blob/master/gb/21/7/31/n13129138.md#1">轮回传奇：他一夕成了冥府官  调解冤魂索命债</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/brkhkd3127/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
